--- a/examples/index.html
+++ b/examples/index.html
@@ -105,6 +105,11 @@
             <img src='screenshots/panorama.jpg'>
             <iframe src="" style="display: none;"></iframe>
         </div>
+        <div class="exampleContainer">
+            <h3><a href='./stereo.html' target='_blank'>Stereo effects</a></h3>
+            <img src='screenshots/stereo.jpg'>
+            <iframe src="" style="display: none;"></iframe>
+        </div>
         <script src="https://unpkg.com/three@0.86.0/examples/js/Detector.js"></script>
         <script type="text/javascript">
             if (!Detector.webgl) {
